<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_editor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="ng.cheo.android.inventory.EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/field_image"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="88dp"
            android:layout_weight="4">

            <ImageView
                android:id="@+id/edit_image"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:scaleType="centerCrop"
                android:background="#999999"/>

            <Button
                android:id="@+id/import_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Import Image"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/field_name"/>

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/field_qty"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4">

            <TextView
                android:id="@+id/qty_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="#222222"
                android:textSize="18sp"
                android:paddingTop="8dp"
                android:paddingLeft="4dp"/>

            <Button
                android:id="@+id/qty_increase_button"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/qty_decrease_button"
                android:text="+"/>

            <Button
                android:id="@+id/qty_decrease_button"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="-"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="0dp"
        android:paddingBottom="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/field_qty_sold"/>

        <TextView
            android:id="@+id/qty_sold_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="0"
            android:textColor="#222222"
            android:textSize="18sp"
            android:paddingTop="8dp"
            android:paddingLeft="4dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/field_price"/>

        <EditText
            android:id="@+id/edit_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:inputType="numberDecimal"/>

    </LinearLayout>

</LinearLayout>
